--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ aside h2 {
   border: none;
 }
 
-.news-card h4 {
+.news-card h3 {
   font-size: 21px;
   margin-bottom: 15px;
 }
@@ -169,6 +169,7 @@ aside h2 {
   font-size: 70px;
   letter-spacing: 2px;
   font-weight: 900;
+  line-height: 74px;
 }
 
 .hero-desc {
@@ -256,7 +257,7 @@ aside h2 {
   font-size: 28px;
 }
 
-.feat-desc h4 {
+.feat-desc h3 {
   color: #0c0720;
   font-weight: 900;
   font-size: 18px;
@@ -340,7 +341,7 @@ aside h2 {
     margin-bottom: 30px;
   }
 
-  .news-card h4 {
+  .news-card h3 {
     font-size: 18px;
     margin-bottom: 15px;
     letter-spacing: 2px;
